--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -63,7 +24,7 @@
         .password-container {
             margin-bottom: 15px;
         }
-        input[type="password"], input[type="text"] {
+        input[type="password"], textarea {
             padding: 8px;
             font-size: 1rem;
             border: 2px solid #ff4d94;
@@ -71,6 +32,10 @@
             background-color: #fff0f5;
             width: 80%;
             max-width: 300px;
+        }
+        textarea {
+            height: 100px;
+            resize: none;
         }
         button {
             padding: 8px 15px;
@@ -112,39 +77,66 @@
         <button onclick="checkPassword()">Unlock us 💕</button>
     </div>
 
-    <div id="message-container" class="password-container" style="display: none;">
-        <h2>Write Your Message! 🌸</h2>
-        <input type="text" id="user-message" placeholder="Type something sweet...">
-        <button onclick="displayMessage()">Show My Message 💖</button>
+    <div id="message-container" class="message" style="display: none;">
+        <h2>Our Shared Messages! 🌸</h2>
+        <textarea id="shared-message" placeholder="Write something sweet..."></textarea>
+        <button onclick="saveMessage()">Save Message 💖</button>
+        <p class="heart">💖 From Us to Each Other 💖</p>
     </div>
 
-    <div id="display-message" class="message">
-        <p id="shown-message"></p>
-        <p class="heart">💖 From Me to You 💖</p>
-    </div>
-
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <script>
-        const password = "koky"; // Change this to a secret code only you and she know
+        // Replace with your Firebase config
+        const firebaseConfig = {
+        apiKey: "AIzaSyBc3SIkXkTzWt5oznQoNcickDD5AtwZf7Y",
+        authDomain: "my-pretty-girl-b3594.firebaseapp.com",
+        databaseURL: "https://my-pretty-girl-b3594-default-rtdb.firebaseio.com",
+        projectId: "my-pretty-girl-b3594",
+        storageBucket: "my-pretty-girl-b3594.firebasestorage.app",
+        messagingSenderId: "783399852126",
+        appId: "1:783399852126:web:0d5386d0b902e8f79a3ccf",
+        measurementId: "G-XZV12LKKDY"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+        const messageRef = database.ref('sharedMessage');
+
+        const password = "love123"; // Change this to a secret code only you and she know
 
         function checkPassword() {
             const input = document.getElementById("password").value;
             if (input === password) {
                 document.getElementById("password-container").style.display = "none";
                 document.getElementById("message-container").style.display = "block";
+                loadMessage(); // Load the shared message
             } else {
                 alert("Oops! Wrong code, try our special word key! 💕");
             }
         }
 
-        function displayMessage() {
-            const message = document.getElementById("user-message").value.trim();
+        function saveMessage() {
+            const message = document.getElementById("shared-message").value.trim();
             if (message) {
-                document.getElementById("display-message").style.display = "block";
-                document.getElementById("shown-message").textContent = message;
-                document.getElementById("user-message").value = ""; // Clear input
+                messageRef.set({
+                    text: message,
+                    timestamp: Date.now()
+                });
+                alert("Message saved! 💕");
             } else {
                 alert("Please write a message first! 💕");
             }
+        }
+
+        function loadMessage() {
+            messageRef.on('value', (snapshot) => {
+                const data = snapshot.val();
+                if (data && data.text) {
+                    document.getElementById("shared-message").value = data.text;
+                }
+            });
         }
     </script>
 </body>
