--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         const database = firebase.database();
         const messagesRef = database.ref('messages');
 
-        const password = "love123"; // Change this to a secret code only you and she know
+        const password = "koky"; // Change this to a secret code only you and she know
 
         function checkPassword() {
             const input = document.getElementById("password").value;
