--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="timer" id="love-timer">Days: 0, Hours: 0, Minutes: 0, Seconds: 0</div>
         <div class="photo-frame">
             <!-- Replace 'your-image-filename.jpg' with the actual filename you uploaded -->
-            <img src="your-image-filename.jpg" alt="Cute Picture of You" title="My Pretty Girl 💕">
+            <img src="WhatsApp Image 2025-05-14 at 11.28.26_9cf906ab.jpg" alt="Cute Picture of You" title="My Pretty Girl 💕">
         </div>
         <div id="message-log"></div>
         <button id="next-button" onclick="showNextMessage()">Next Message 💕</button>
