--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>For My Pretty Girl</title>
+    <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Annie Use Your Telescope', cursive, sans-serif;
             background: linear-gradient(135deg, #fff0f5, #ffe4e1);
             color: #ff69b4;
             text-align: center;
             margin: 0;
-            padding: 10px;
-            min-height: 100vh;
+            padding: 30px;
+            min-height: 140vh; /* Further increased for more space */
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
@@ -26,7 +27,7 @@
             width: 100%;
             height: 100%;
             background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="20" fill="%23ffb6c1" opacity="0.3"/><path d="M30 70 Q50 90 70 70" stroke="%23ff69b4" stroke-width="2" fill="none"/></svg>');
-            background-size: 50px 50px;
+            background-size: 60px 60px;
             opacity: 0.5;
             z-index: -1;
             animation: float 10s infinite alternate;
@@ -36,10 +37,10 @@
             to { transform: translateY(-5px); }
         }
         h1 {
-            font-size: 1.5rem;
-            margin: 10px 0;
+            font-size: 2.2rem; /* Increased for better visibility */
+            margin: 20px 0;
             color: #ff1493;
-            text-shadow: 2px 2px 4px #fff0f5;
+            text-shadow: 3px 3px 5px #fff0f5;
             position: relative;
         }
         h1::after {
@@ -52,34 +53,34 @@
             50% { transform: translateY(-5px); }
         }
         .password-container {
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
         input[type="password"] {
-            padding: 8px;
-            font-size: 1rem;
+            padding: 12px;
+            font-size: 1.4rem; /* Increased for readability */
             border: 3px solid #ff69b4;
-            border-radius: 15px;
+            border-radius: 20px;
             background-color: #ffe4e1;
             width: 80%;
-            max-width: 280px;
-            box-shadow: 2px 2px 5px #ffb6c1, inset 1px 1px 3px #fff;
+            max-width: 350px; /* Increased width */
+            box-shadow: 3px 3px 6px #ffb6c1, inset 1px 1px 3px #fff;
             transition: all 0.3s;
         }
         input[type="password"]:focus {
             border-color: #ff1493;
-            box-shadow: 2px 2px 5px #ff69b4;
+            box-shadow: 3px 3px 6px #ff69b4;
             transform: scale(1.02);
         }
         button {
-            padding: 8px 20px;
-            font-size: 1rem;
+            padding: 12px 30px;
+            font-size: 1.4rem; /* Increased for better visibility */
             background: linear-gradient(45deg, #ff80bf, #ff69b4);
             color: white;
             border: none;
-            border-radius: 20px;
+            border-radius: 25px;
             cursor: pointer;
-            margin-top: 5px;
-            box-shadow: 2px 2px 5px #ffb6c1;
+            margin-top: 15px;
+            box-shadow: 3px 3px 6px #ffb6c1;
             transition: all 0.3s;
             position: relative;
             overflow: hidden;
@@ -91,10 +92,10 @@
         button::after {
             content: "💕";
             position: absolute;
-            right: 10px;
+            right: 15px;
             top: 50%;
             transform: translateY(-50%);
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             animation: heartbeat 1.5s infinite;
         }
         @keyframes heartbeat {
@@ -104,9 +105,9 @@
         }
         #next-button {
             background: linear-gradient(45deg, #ffb6c1, #ff69b4);
-            font-size: 1.1rem;
-            padding: 10px 25px;
-            border-radius: 25px;
+            font-size: 1.5rem; /* Increased for better visibility */
+            padding: 15px 35px;
+            border-radius: 30px;
         }
         #next-button:hover {
             background: linear-gradient(45deg, #ff1493, #ffb6c1);
@@ -115,21 +116,20 @@
             display: none;
             animation: fadeIn 1s;
             text-align: center;
-            max-height: 150px; /* Reduced height to minimize scrolling */
             overflow-y: auto;
-            margin-top: 10px;
+            margin-top: 20px;
         }
         .message {
-            font-size: 1rem;
-            padding: 10px;
+            font-size: 1.4rem; /* Increased for readability */
+            padding: 15px;
             background: linear-gradient(135deg, #ffe4e1, #fff0f5);
-            border-radius: 20px;
-            margin: 8px auto;
+            border-radius: 25px;
+            margin: 15px auto;
             word-wrap: break-word;
             max-width: 90%;
-            box-shadow: 3px 3px 8px #ffb6c1, inset 1px 1px 3px #fff;
+            box-shadow: 4px 4px 10px #ffb6c1, inset 2px 2px 4px #fff;
             position: relative;
-            border: 2px solid #ff69b4;
+            border: 3px solid #ff69b4;
             transition: transform 0.3s;
         }
         .message:hover {
@@ -138,32 +138,32 @@
         .message::before {
             content: "💖";
             position: absolute;
-            left: 10px;
+            left: 15px;
             top: 50%;
             transform: translateY(-50%);
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             animation: bounce 1.5s infinite;
         }
         .message::after {
             content: "🌸";
             position: absolute;
-            right: 10px;
+            right: 15px;
             top: 50%;
             transform: translateY(-50%);
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             animation: bounce 1.5s infinite;
         }
         .timer {
-            font-size: 1rem;
+            font-size: 1.4rem; /* Increased for better visibility */
             color: #ff1493;
             background: linear-gradient(135deg, #ffe4e1, #fff0f5);
-            border: 2px solid #ff69b4;
-            border-radius: 15px;
-            padding: 8px 12px;
+            border: 3px solid #ff69b4;
+            border-radius: 20px;
+            padding: 12px 18px;
             display: inline-block;
-            margin: 5px 0;
-            box-shadow: 3px 3px 8px #ffb6c1, inset 1px 1px 3px #fff;
-            text-shadow: 1px 1px 3px #fff0f5;
+            margin: 15px 0;
+            box-shadow: 4px 4px 10px #ffb6c1, inset 2px 2px 4px #fff;
+            text-shadow: 2px 2px 4px #fff0f5;
             position: relative;
         }
         .timer::before {
@@ -180,40 +180,40 @@
             to { opacity: 1; }
         }
         .heart {
-            font-size: 1.5rem;
+            font-size: 2rem; /* Increased for better visibility */
             color: #ff1493;
-            text-shadow: 1px 1px 3px #fff0f5;
+            text-shadow: 2px 2px 4px #fff0f5;
             animation: heartbeat 1.5s infinite;
-            margin: 5px 0;
+            margin: 15px 0;
         }
         .photo-frame {
-            margin: 5px auto;
-            max-width: 150px; /* Reduced size to fit better */
+            margin: 15px auto;
+            max-width: 220px; /* Increased size for more prominence */
             position: relative;
         }
         .photo-frame img {
             width: 100%;
             height: auto;
-            border-radius: 15px;
-            border: 2px solid #ff69b4;
-            box-shadow: 3px 3px 8px #ffb6c1;
+            border-radius: 20px;
+            border: 3px solid #ff69b4;
+            box-shadow: 4px 4px 10px #ffb6c1;
             position: relative;
             z-index: 1;
         }
         .photo-frame::before {
             content: "💖";
             position: absolute;
-            top: -8px;
-            left: 8px;
-            font-size: 1.2rem;
+            top: -10px;
+            left: 10px;
+            font-size: 1.5rem;
             animation: bounce 1.5s infinite;
         }
         .photo-frame::after {
             content: "🌸";
             position: absolute;
-            bottom: -8px;
-            right: 8px;
-            font-size: 1.2rem;
+            bottom: -10px;
+            right: 10px;
+            font-size: 1.5rem;
             animation: bounce 1.5s infinite;
         }
     </style>
@@ -229,7 +229,6 @@
         <h2>Our Story! 🌸</h2>
         <div class="timer" id="love-timer">Days: 0, Hours: 0, Minutes: 0, Seconds: 0</div>
         <div class="photo-frame">
-            <!-- Replace 'your-image-filename.jpg' with the actual filename you uploaded -->
             <img src="WhatsApp Image 2025-05-14 at 11.28.26_9cf906ab.jpg" alt="Cute Picture of You" title="My Pretty Girl 💕">
         </div>
         <div id="message-log"></div>
@@ -280,20 +279,31 @@
         }
 
         function showNextMessage() {
+            const messageLog = document.getElementById("message-log");
+            messageLog.innerHTML = ""; // Clear the current message
+
             if (currentMessageIndex < messages.length) {
                 const message = messages[currentMessageIndex];
-                const messageLog = document.getElementById("message-log");
-
                 const messageDiv = document.createElement("div");
                 messageDiv.className = "message";
                 messageDiv.textContent = message;
-
                 messageLog.appendChild(messageDiv);
-
                 currentMessageIndex++;
-                if (currentMessageIndex === messages.length) {
-                    document.getElementById("next-button").style.display = "none"; // Hide button when done
-                }
+            } else {
+                currentMessageIndex = 0; // Reset to start from the beginning
+                const message = messages[currentMessageIndex];
+                const messageDiv = document.createElement("div");
+                messageDiv.className = "message";
+                messageDiv.textContent = message;
+                messageLog.appendChild(messageDiv);
+                currentMessageIndex++;
+            }
+
+            if (currentMessageIndex === messages.length) {
+                document.getElementById("next-button").style.display = "none"; // Hide button temporarily
+                setTimeout(() => {
+                    document.getElementById("next-button").style.display = "block"; // Show button again to loop
+                }, 1000); // Brief pause before looping
             }
         }
     </script>
