--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             text-align: center;
             margin: 0;
             padding: 30px;
-            min-height: 140vh; /* Further increased for more space */
+            min-height: 140vh;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            justify-content: center; /* Center content vertically */
             position: relative;
         }
         body::before {
@@ -37,7 +37,7 @@
             to { transform: translateY(-5px); }
         }
         h1 {
-            font-size: 2.2rem; /* Increased for better visibility */
+            font-size: 2.2rem;
             margin: 20px 0;
             color: #ff1493;
             text-shadow: 3px 3px 5px #fff0f5;
@@ -54,15 +54,44 @@
         }
         .password-container {
             margin-bottom: 20px;
+            background: linear-gradient(135deg, #ffe4e1, #fff0f5);
+            padding: 25px;
+            border-radius: 30px;
+            border: 3px solid #ff69b4;
+            box-shadow: 4px 4px 10px #ffb6c1, inset 2px 2px 4px #fff;
+            position: relative;
+            animation: glow 2s infinite alternate;
+            max-width: 400px;
+            margin: 0 auto;
+        }
+        @keyframes glow {
+            from { box-shadow: 4px 4px 10px #ffb6c1, inset 2px 2px 4px #fff; }
+            to { box-shadow: 6px 6px 15px #ff69b4, inset 3px 3px 6px #fff; }
+        }
+        .password-container::before {
+            content: "💖";
+            position: absolute;
+            top: -15px;
+            left: 20px;
+            font-size: 2rem;
+            animation: bounce 1.5s infinite;
+        }
+        .password-container::after {
+            content: "🌸";
+            position: absolute;
+            bottom: -15px;
+            right: 20px;
+            font-size: 2rem;
+            animation: bounce 1.5s infinite;
         }
         input[type="password"] {
             padding: 12px;
-            font-size: 1.4rem; /* Increased for readability */
+            font-size: 1.4rem;
             border: 3px solid #ff69b4;
             border-radius: 20px;
             background-color: #ffe4e1;
             width: 80%;
-            max-width: 350px; /* Increased width */
+            max-width: 350px;
             box-shadow: 3px 3px 6px #ffb6c1, inset 1px 1px 3px #fff;
             transition: all 0.3s;
         }
@@ -73,7 +102,7 @@
         }
         button {
             padding: 12px 30px;
-            font-size: 1.4rem; /* Increased for better visibility */
+            font-size: 1.4rem;
             background: linear-gradient(45deg, #ff80bf, #ff69b4);
             color: white;
             border: none;
@@ -103,24 +132,30 @@
             50% { transform: scale(1.2) translateY(-50%); }
             100% { transform: scale(1) translateY(-50%); }
         }
-        #next-button {
-            background: linear-gradient(45deg, #ffb6c1, #ff69b4);
-            font-size: 1.5rem; /* Increased for better visibility */
-            padding: 15px 35px;
-            border-radius: 30px;
-        }
-        #next-button:hover {
-            background: linear-gradient(45deg, #ff1493, #ffb6c1);
-        }
         .message-container {
             display: none;
             animation: fadeIn 1s;
             text-align: center;
-            overflow-y: auto;
-            margin-top: 20px;
+            position: relative;
+            margin: 0 auto;
+            max-width: 500px;
+        }
+        #next-button {
+            background: linear-gradient(45deg, #ffb6c1, #ff69b4);
+            font-size: 1.5rem;
+            padding: 15px 35px;
+            border-radius: 30px;
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            margin: 0;
+        }
+        #next-button:hover {
+            background: linear-gradient(45deg, #ff1493, #ffb6c1);
         }
         .message {
-            font-size: 1.4rem; /* Increased for readability */
+            font-size: 1.4rem;
             padding: 15px;
             background: linear-gradient(135deg, #ffe4e1, #fff0f5);
             border-radius: 25px;
@@ -154,7 +189,7 @@
             animation: bounce 1.5s infinite;
         }
         .timer {
-            font-size: 1.4rem; /* Increased for better visibility */
+            font-size: 1.4rem;
             color: #ff1493;
             background: linear-gradient(135deg, #ffe4e1, #fff0f5);
             border: 3px solid #ff69b4;
@@ -180,7 +215,7 @@
             to { opacity: 1; }
         }
         .heart {
-            font-size: 2rem; /* Increased for better visibility */
+            font-size: 2rem;
             color: #ff1493;
             text-shadow: 2px 2px 4px #fff0f5;
             animation: heartbeat 1.5s infinite;
@@ -188,7 +223,7 @@
         }
         .photo-frame {
             margin: 15px auto;
-            max-width: 220px; /* Increased size for more prominence */
+            max-width: 220px;
             position: relative;
         }
         .photo-frame img {
@@ -282,6 +317,9 @@
             const messageLog = document.getElementById("message-log");
             messageLog.innerHTML = ""; // Clear the current message
 
+            const nextButton = document.getElementById("next-button");
+            nextButton.style.display = "block"; // Ensure the button is always visible
+
             if (currentMessageIndex < messages.length) {
                 const message = messages[currentMessageIndex];
                 const messageDiv = document.createElement("div");
@@ -297,13 +335,6 @@
                 messageDiv.textContent = message;
                 messageLog.appendChild(messageDiv);
                 currentMessageIndex++;
-            }
-
-            if (currentMessageIndex === messages.length) {
-                document.getElementById("next-button").style.display = "none"; // Hide button temporarily
-                setTimeout(() => {
-                    document.getElementById("next-button").style.display = "block"; // Show button again to loop
-                }, 1000); // Brief pause before looping
             }
         }
     </script>
