--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             "Those tiny bites you do? Cutest thing ever. Makes me wanna squeeze you. 💖",
             "Honestly, I love the most when you're just being you – no filters, no energy, just soft and adorable. 💕",
             "The way you look at me when you’re all sleepy and cuddly? That’s my favorite thing in the world. 💤",
-            "Here’s to more cute moments with my prettiest girl💕"
+            "Here’s to more cute moments with my koky girl💕"
         ];
 
         let currentMessageIndex = 0;
