--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         function startTimer() {
             function updateTimer() {
                 const now = new Date();
-                const diffMs = nowDate - startDate;
+                const diffMs = now - startDate;
                 const days = Math.floor(diffMs / (1000 * 60 * 60 * 24));
                 const hours = Math.floor((diffMs % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
                 const minutes = Math.floor((diffMs % (1000 * 60 * 60)) / (1000 * 60));
