--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
 
         const messages = [
             "When i felt that you were mad at me i really realized how much you mean to me, you cant even imagine ",
+            "Iam now ready to do whatever makes you happy ",
             "Thank you for these 20 days, they meant so much to me 💖",
             "I know I've made mistakes that hurt you, and I'm really sorry 😔",
             "I want to make things right and be the person you deserve 🌸",
