--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
             "you are so precious ,Dont make anything make you feel less than that",
             "I hope you never settle for anything that doesn’t see your worth",
             "I hope you love yourself in the way you’ve always deserved to be loved",
-            "I hope you never stop chasing your dreams — especially the skies you’ve always wanted to fly."
+            "I hope you never stop chasing your dreams — especially the skies you’ve always wanted to fly.",
+            "you are really perfect the way you are , Dont change it"
         ];
 
         let currentMessageIndex = 0;
