--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@
 
         const messages = [
             "I wanted to say one more thing,Thank u for giving me a chance to know you ",
-            " I hope you understand what I did ",
+            "I really can't see you and know that there is no hope or chance",
+            "I hope you understand what I did ",
             "I Dont know if that would make me weak but I really wished things had worked out better between us",
             "Maybe we didnt connect the way you wished it would be",
             "Maybe I am not the one you want or need",
